deployments/selfhosted/radicale/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radicale
  namespace: selfhosted
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  serviceName: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      containers:
        - name: radicale
          image: "tomsquest/docker-radicale:2.1.12.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5232
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config/config
              subPath: config
            - name: config
              mountPath: /config/rights
              subPath: rights
            - name: users
              mountPath: /config/users
              subPath: users
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            failureThreshold: 5
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 10
          resources: {}

      volumes:
        - name: users
          secret:
            secretName: radicale-users
            defaultMode: 438
        - name: config
          configMap:
            name: radicale-config
            defaultMode: 438

  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: radicale
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "1Gi"
