deployments/selfhosted/radicale/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: selfhosted
  labels:
    app: radicale
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: radicale
